...
}

List<MenuCategory> _fallbackCategories() => const [
      MenuCategory(id: 'hot', name: 'Hot Drinks'),
      MenuCategory(id: 'cold', name: 'Cold Drinks'),
      MenuCategory(id: 'pizza', name: 'Pizza'),
      MenuCategory(id: 'pasta', name: 'Pasta'),
      MenuCategory(id: 'burger', name: 'Burger'),
      MenuCategory(id: 'salads', name: 'Salads'),
    ];

class _CategoryTile extends StatelessWidget {
  const _CategoryTile({required this.category, required this.onTap});
...
